syntax = "proto3";

package com.cs301.client_service.protobufs;

import "account_type.proto";
import "account_status.proto";
import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "com.cs301.client_service.proto";

message AccountProto {
  string account_id = 1;
  string client_id = 2;
  AccountTypeProto account_type = 3;
  AccountStatusProto account_status = 4;
  google.protobuf.Timestamp opening_date = 5;
  double initial_deposit = 6;
  string currency = 7;
  string branch_id = 8;
}